--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/omarKhesruf/COMP229-Midterm.git"
   },
   "keywords": [
     "NodeJS",
@@ -51,7 +51,7 @@
   "author": "Omar Khesruf",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/omarKhesruf/COMP229-Midterm/issues"
   },
-  "homepage": ""
+  "homepage": "https://github.com/omarKhesruf/COMP229-Midterm#readme"
 }
